--- a/source/sass/pages/apply.scss
+++ b/source/sass/pages/apply.scss
@@ -20,26 +20,27 @@
         margin: 0;
         font-family: 'Lora', serif;
         font-weight: 700;
-        font-size: 2.15em;
+        font-size: 2.5em;
         color: $off-black;
     }
 
     h3 {
         color: $blue-dark;
-        font-size: 1.25em;
+        font-size: 1.5em;
         letter-spacing: 1px;
     }
 
-    .body-text, label {
+    @at-root
+    .body-text {
         font-family: 'Source Sans Pro', sans-serif;
         font-weight: 400;
-        font-size: 1.25em;
+        font-size: 1.5em;
         color: $off-black;
         line-height: 1.55em;
     }
 
     .form-nav {
-        margin: 2em auto 0 auto;
+        margin: 5em auto 0 auto;
         width: 70%;
         @include clearfix();
 
@@ -57,6 +58,12 @@
     label:not(.sr-only) {
         display: block;
     }
+
+    .form-group {
+        text-align: left;
+        width: 92%;
+        margin: 0 auto;
+    }
 }
 
 .step-case-number {
@@ -68,6 +75,18 @@
 .step-household-adults {
     .form-group {
         margin: 0.5em 0;
+    }
+
+    .add-adult {
+        margin-top: 2em;
+    }
+}
+
+.step-adult-signer-ssn {
+    input[type=text] {
+        width: 5em;
+        @include center-placeholder();
+        text-align: center;
     }
 }
 
